# job-hunting-assistant

./: .env  .gitignore  README.md  pyproject.toml  requirement.txt  setup.py
.roo/: mcp.json
data/: job_desc.txt  optimized_resume.md  简历.docx
docs/: architecture.md  class_relationships.mermaid  component_architecture.mermaid  data_flow_diagram.mermaid  project_architecture.mermaid
src/job_hunting_server/: job.txt  server.py
src/job_hunting_server/llms/: llm.py
src/job_hunting_server/prompts/: prompt.py
src/job_hunting_server/selenium/: listjob.py
src/job_hunting_server/tools/: job.py  resume.py  writeresume.py
src/job_hunting_server/word/: __init__.py  loaddoc.py  word.py
