[project]
name = "job-hunting-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.5.1",
    "mcp[cli]>=1.9.1",
    "python-dotenv>=1.1.0",
]
[project.license]
file = "LICENSE"

[project.scripts]
job-hunting-assistant = "job_hunting_server:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_hunting_server"]
